@@ -10,7 +10,7 @@ Video=false
 Audio=true
 Image=true
 SeekByTime=false
-TranscodeVideo=MPEGAC3
+TranscodeVideo=MPEGPSAC3
 TranscodeAudio=LPCM
 DefaultVBVBufSize=true
 MuxH264ToMpegTS=true
