@@ -14,7 +14,7 @@ Video=true
 Audio=true
 Image=true
 SeekByTime=true
-TranscodeVideo=MPEGAC3
+TranscodeVideo=MPEGPSAC3
 TranscodeAudio=LPCM
 DefaultVBVBufSize=true
 MuxH264ToMpegTS=true
