@@ -10,7 +10,7 @@ Video=true
 Audio=true
 Image=true
 SeekByTime=false
-TranscodeVideo=MPEGAC3
+TranscodeVideo=MPEGPSAC3
 TranscodeAudio=LPCM
 TranscodeFastStart=false
 DefaultVBVBufSize=true
