@@ -8,7 +8,7 @@ Video=true
 Audio=true
 Image=true
 SeekByTime=true
-TranscodeVideo=MPEGAC3
+TranscodeVideo=MPEGPSAC3
 TranscodeAudio=MP3
 DefaultVBVBufSize=true
 MuxH264ToMpegTS=true
