@@ -8,8 +8,8 @@ Video=true
 Audio=true
 Image=true
 SeekByTime=false
-TranscodeVideo=MPEGAC3
-TranscodeAudio=PCM
+TranscodeVideo=MPEGPSAC3
+TranscodeAudio=LPCM
 DefaultVBVBufSize=true
 MuxH264ToMpegTS=true
 MuxDTSToMpeg=true
