@@ -138,12 +138,24 @@ CreateDLNATreeFaster = true
 # mux to.
 #
 
-# TranscodeVideo: Codec to use for video transcoding.
-# Currently supported: "MPEGAC3", "MPEGTSAC3" or "WMV".
-TranscodeVideo = MPEGAC3
+# TranscodeVideo: Profile to use for video transcoding.
+# One of the following:
+#
+#     MPEGPSAC3: MPEG-2 video, AC-3 audio, MPEG-PS container
+#     MPEGTSAC3: MPEG-2 video, AC-3 audio, MPEG-TS container
+#     WMV:       WMV2 video, WMA2 audio, ASF container
+#
+# XXX MPEGPSAC3 was previously named MPEGAC3. The old name is deprecated.
+# XXX Currently only the MEncoder engine supports all 3 profiles.
+# Other engines transcode video to the MPEGPSAC3 profile,
+# regardless of this setting.
+#
+# The default value is MPEGPSAC3.
+TranscodeVideo = MPEGPSAC3
 
-# TranscodeAudio: Codec to use for audio transcoding.
+# TranscodeAudio: Profile to use for audio transcoding.
 # Currently supported: "LPCM", "MP3" or "WAV".
+# Default: LPCM
 TranscodeAudio = WAV
 
 # DefaultVBVBufSize: Whether or not to use the default DVD buffer size. Setting
