@@ -17,7 +17,7 @@ DLNALocalizationRequired=true
 CBRVideoBitrate=37000
 ByteToTimeseekRewindSeconds=0
 
-TranscodeVideo=MPEGAC3
+TranscodeVideo=MPEGPSAC3
 TranscodeAudio=WAV
 DefaultVBVBufSize=false
 MuxH264ToMpegTS=true
