@@ -29,9 +29,9 @@ SeekByTime=false
 ##-------------------- 
 ## Transcoding/Muxing capabilities
 
-##Transcode codecs for video and audio engines #
-##currently supported: MPEGAC3 or WMV for video, PCM or MP3 for audio
-TranscodeVideo=MPEGAC3
+##Transcode profiles for video and audio engines #
+##currently supported: MPEGPSAC3, MPEGTSAC3 or WMV for video, LPCM, WAV or MP3 for audio
+TranscodeVideo=MPEGPSAC3
 TranscodeAudio=LPCM
 ## TranscodeAudio=MP3
 
