@@ -21,7 +21,7 @@
 #               Changed "RendererName = Philips Tv" to Philips TV
 # version 1.5   Removed mov as supported codec.
 #               Changes to findings and spelling.
-#               Changed MaxVideoBitrateMbps = 75 Max TV native support transcoding to MPEGAC3
+#               Changed MaxVideoBitrateMbps = 75 Max TV native support transcoding to MPEGPSAC3
 # version 1.6   Found a nicer png icon. Thanks bytesp (from Issue 1187)
 #               Changed "RendererIcon = philips 40pfl8605h_12.png" to philips-pfl.png
 #               Renamed config file "Philips 40pfl8605h_12 1.6.conf" to PhilipsPFL 1.6.conf
@@ -166,8 +166,8 @@ MediaInfo = true
 # With the 40pfl8605h_12 it is not possible to seek by time.
 SeekByTime = false
 # --------------------------------------------------------------------------------------------
-# On 40pfl8605h_12 working codec for video Transcoding: MPEGTSAC3 , MPEGAC3
-TranscodeVideo = MPEGAC3
+# On 40pfl8605h_12 working codec for video Transcoding: MPEGTSAC3 , MPEGPSAC3
+TranscodeVideo = MPEGPSAC3
 # On 40pfl8605h_12 working codec for audio Transcoding:  MP3 , LPCM, WAV
 TranscodeAudio = WAV
 # --------------------------------------------------------------------------------------------
