@@ -8,7 +8,7 @@ Video=true
 Audio=true
 Image=true
 SeekByTime=false
-TranscodeVideo=MPEGAC3
+TranscodeVideo=MPEGPSAC3
 TranscodeAudio=LPCM
 DefaultVBVBufSize=true
 MuxH264ToMpegTS=true
