@@ -9,7 +9,7 @@ Video=false
 Audio=false
 Image=false
 SeekByTime=false
-TranscodeVideo=MPEGAC3
+TranscodeVideo=MPEGPSAC3
 TranscodeAudio=MP3
 DefaultVBVBufSize=true
 MuxH264ToMpegTS=true
