@@ -13,7 +13,7 @@ Video=true
 Audio=true
 Image=true
 SeekByTime=false
-TranscodeVideo=MPEGAC3
+TranscodeVideo=MPEGPSAC3
 TranscodeAudio=WAV
 DefaultVBVBufSize=true
 MuxH264ToMpegTS=true
